[package]
name = "rs-raft"
version = "0.1.0"
authors = ["oatiz <zeshawnetq@gmail.com>"]
edition = "2018"

[dependencies]
log = ">0.2"
protobuf = "2.0.4"
quick-error = "1.2.2"
rand = "0.5.4"
fxhash = "0.2.1"
fail = { version = "0.2", optional = true }

[dev-dependencies]
env_logger = "0.5"
criterion = ">0.2.4"
lazy_static = "1.0"
